@@ -1,3 +1,7 @@
+2010-12-14 Thunor <thunorsif_at_hotmail.com>
+* Added RAM size changing to the runtime options.
+* Added RAM size to the rcfile.
+
 2010-12-13 Thunor <thunorsif_at_hotmail.com>
 * Added vkeyb autohide, toggle_shift and alpha to the rcfile.
 * Added invert screen to the rcfile.
